--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 <body>
 
     <header>
-        <h1>Sample HTML with CSS</h1>
+        <h1>My Sample Devops Project</h1>
     </header>
 
     <section>
-        <h2>Welcome to My Devops Project</h2>
+        <h2>Welcome to My ComIT Devops Project</h2>
         <p>This is a sample HTML page with inline CSS styling.</p>
-        <p>Feel free to customize and modify it according to your needs.</p>
+        <p>Jenkins CICD with GitHub Integration</p>
     </section>
 
     <footer>
-        &copy; 2023 Your Website Name
+        &copy; 2023 My ComIT Devops Project
     </footer>
 
 </body>
