--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <footer>
-        &copy; 2023 My ComIT Devops Project
+        &copy; 2023 My Final ComIT Devops Project
     </footer>
 
 </body>
